--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -39,6 +39,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/magnific.popup.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/owl.carousel.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/owl.theme.default.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/custom.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
@@ -186,6 +187,7 @@
     <script src="/assets/js/owl.carousel.min.js"></script>
     <script src="/assets/js/booking.form.js"></script>
     <script src="/assets/js/contact.form.js"></script>
+    <script src="/assets/js/custom.min.js"></script>
 
     <!-- Map Scripts -->
     <script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
