--- a/app/Resources/views/admin/blog/index.html.twig
+++ b/app/Resources/views/admin/blog/index.html.twig
@@ -2,141 +2,128 @@
 
 {% block body_id 'admin_index' %}
 
-{% block main %}
-    <h1>{{ 'title.post_list'|trans }}</h1>
-    <div class="section actions">
-        <a href="{{ path('admin_post_new') }}" class="btn btn-sm pull-right btn-success">
-            <i class="fa fa-plus"></i> {{ 'action.create_post'|trans }}
-        </a>
-    </div>
-        
-           <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-12">
-    
- 
-    <div class="x_panel">
-                  <div class="x_title">
-                    <h2>Top Profiles <small>Sessions</small></h2>
-                    <ul class="nav navbar-right panel_toolbox">
-                      <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                      </li>
-                      <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                        <ul class="dropdown-menu" role="menu">
-                          <li><a href="#">Settings 1</a>
-                          </li>
-                          <li><a href="#">Settings 2</a>
-                          </li>
+    {% block main %}
+        <h1>{{ 'title.post_list'|trans }}</h1>        
+        <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-12">
+
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>Posts <small>Sessions</small></h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            <li class="">
+                                <a href="{{ path('admin_post_new') }}" class=""><i class="fa fa-plus"></i></a>
+                            </li>
+                            <li><a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>
                         </ul>
-                      </li>
-                      <li><a class="close-link"><i class="fa fa-close"></i></a>
-                      </li>
-                    </ul>
-                    <div class="clearfix"></div>
-                  </div>
-                  <div class="x_content">
-                      {% for post in posts %}
-                    <article class="media event">
-                      <a class="pull-left date">
-                        <p class="month">April</p>
-                        <p class="day">23</p>
-                      </a>
-                      <div class="media-body">
-                        <a class="title" href="#">Item Two Title</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                      </div>
-                    </article>
-                    {% endfor %}
-                    
-                    {% if posts|length == 0 %}
-                        <article class="media event">
-                      <div class="media-body">
-                        <a class="title" href="#"></a>
-                        <p>{{ 'post.no_posts_found'|trans }}</p>
-                      </div>
-                    </article>
-                    {% endif %}
-                  </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        {% for post in posts %}
+                            <article class="media event">
+                                <a class="pull-left date">
+                                    <p class="month">April</p>
+                                    <p class="day">23</p>
+                                </a>
+                                <div class="media-body">
+                                    <a class="title" href="#">Item Two Title</a>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                </div>
+                            </article>
+                        {% endfor %}
+
+                        {% if posts|length == 0 %}
+                            <article class="media event">
+                                <div class="media-body">
+                                    <a class="title" href="#"></a>
+                                    <p>{{ 'post.no_posts_found'|trans }}</p>
+                                </div>
+                            </article>
+                        {% endif %}
+                    </div>
                 </div>
             </div>
-        
-        <div class="col-md-6 col-sm-6 col-xs-12">
-        <div class="x_panel">
-                  <div class="x_title">
-                    <h2>Future Events<small>Sessions</small></h2>
-                    <ul class="nav navbar-right panel_toolbox">
-                      <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                      </li>
-                      <li class="dropdown">
-                        <a href="#" class=""><i class="fa fa-plus"></i></a>
-                      </li>
-                      {#<li><a class="close-link"><i class="fa fa-close"></i></a>
-                      </li>#}
-                    </ul>
-                    <div class="clearfix"></div>
-                  </div>
-                  <div class="x_content">
-                    <article class="media event">
-                      <a class="pull-left date">
-                        <p class="month">April</p>
-                        <p class="day">23</p>
-                      </a>
-                      <div class="media-body">
-                        <a class="title" href="#">Item One Title</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                      </div>
-                    </article>
-                    <article class="media event">
-                      <a class="pull-left date">
-                        <p class="month">April</p>
-                        <p class="day">23</p>
-                      </a>
-                      <div class="media-body">
-                        <a class="title" href="#">Item Two Title</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                      </div>
-                    </article>
-                    <article class="media event">
-                      <a class="pull-left date">
-                        <p class="month">April</p>
-                        <p class="day">23</p>
-                      </a>
-                      <div class="media-body">
-                        <a class="title" href="#">Item Two Title</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                      </div>
-                    </article>
-                    <article class="media event">
-                      <a class="pull-left date">
-                        <p class="month">April</p>
-                        <p class="day">23</p>
-                      </a>
-                      <div class="media-body">
-                        <a class="title" href="#">Item Two Title</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                      </div>
-                    </article>
-                    <article class="media event">
-                      <a class="pull-left date">
-                        <p class="month">April</p>
-                        <p class="day">23</p>
-                      </a>
-                      <div class="media-body">
-                        <a class="title" href="#">Item Three Title</a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                      </div>
-                    </article>
-                  </div>
-                </div>
-        </div>
+
+            <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="x_panel">
+                    <div class="x_title">
+                        <h2>Future Events<small>Sessions</small></h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class=""><i class="fa fa-plus"></i></a>
+                            </li>
+                            {#<li><a class="close-link"><i class="fa fa-close"></i></a>
+                            </li>#}
+                        </ul>
+                        <div class="clearfix"></div>
                     </div>
+                    <div class="x_content">
+                        <article class="media event">
+                            <a class="pull-left date">
+                                <p class="month">April</p>
+                                <p class="day">23</p>
+                            </a>
+                            <div class="media-body">
+                                <a class="title" href="#">Item One Title</a>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </article>
+                        <article class="media event">
+                            <a class="pull-left date">
+                                <p class="month">April</p>
+                                <p class="day">23</p>
+                            </a>
+                            <div class="media-body">
+                                <a class="title" href="#">Item Two Title</a>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </article>
+                        <article class="media event">
+                            <a class="pull-left date">
+                                <p class="month">April</p>
+                                <p class="day">23</p>
+                            </a>
+                            <div class="media-body">
+                                <a class="title" href="#">Item Two Title</a>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </article>
+                        <article class="media event">
+                            <a class="pull-left date">
+                                <p class="month">April</p>
+                                <p class="day">23</p>
+                            </a>
+                            <div class="media-body">
+                                <a class="title" href="#">Item Two Title</a>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </article>
+                        <article class="media event">
+                            <a class="pull-left date">
+                                <p class="month">April</p>
+                                <p class="day">23</p>
+                            </a>
+                            <div class="media-body">
+                                <a class="title" href="#">Item Three Title</a>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-{% endblock %}
+    {% endblock %}
 
-{% block sidebar %}
-    
+    {% block sidebar %}
 
-    {{ parent() }}
 
-    {{ show_source_code(_self) }}
-{% endblock %}
+        {{ parent() }}
+
+        {{ show_source_code(_self) }}
+    {% endblock %}
