--- a/app/Resources/views/admin/blog/new.html.twig
+++ b/app/Resources/views/admin/blog/new.html.twig
@@ -2,28 +2,33 @@
 
 {% block body_id 'admin_post_new' %}
 
-{% block main %}
-    <h1>{{ 'title.post_new'|trans }}</h1>
+    {% block main %}
+        <h1>{{ 'title.post_new'|trans }}</h1>
+        <div class="row">
+            <div class="col-md-12 col-sm-12 col-xs-12 ">
+                <div class="x_panel">
+                    {{ form_start(form) }}
+                    {{ form_row(form.title) }}
+                    {{ form_row(form.summary) }}
+                    {{ form_row(form.content) }}
+                    {{ form_row(form.authorEmail) }}
+                    {{ form_row(form.publishedAt) }}
 
-    {{ form_start(form) }}
-        {{ form_row(form.title) }}
-        {{ form_row(form.summary) }}
-        {{ form_row(form.content) }}
-        {{ form_row(form.authorEmail) }}
-        {{ form_row(form.publishedAt) }}
+                    <input type="submit" value="{{ 'label.create_post'|trans }}" class="btn btn-primary" />
 
-        <input type="submit" value="{{ 'label.create_post'|trans }}" class="btn btn-primary" />
+                    {{ form_widget(form.saveAndCreateNew, { label: 'label.save_and_create_new', attr: { class: 'btn btn-primary' } }) }}
 
-        {{ form_widget(form.saveAndCreateNew, { label: 'label.save_and_create_new', attr: { class: 'btn btn-primary' } }) }}
+                    <a href="{{ path('admin_post_index') }}" class="btn btn-link">
+                        {{ 'action.back_to_list'|trans }}
+                    </a>
+                    {{ form_end(form) }}
+                </div>
+            </div>
+        </div>
+    {% endblock %}
 
-        <a href="{{ path('admin_post_index') }}" class="btn btn-link">
-            {{ 'action.back_to_list'|trans }}
-        </a>
-    {{ form_end(form) }}
-{% endblock %}
+    {% block sidebar %}
+        {{ parent() }}
 
-{% block sidebar %}
-    {{ parent() }}
-
-    {{ show_source_code(_self) }}
-{% endblock %}
+        {{ show_source_code(_self) }}
+    {% endblock %}
