--- a/app/Resources/views/admin/blog/index.html.twig
+++ b/app/Resources/views/admin/blog/index.html.twig
@@ -55,7 +55,7 @@
                             <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                             </li>
                             <li class="dropdown">
-                                <a href="#" class=""><i class="fa fa-plus"></i></a>
+                                <a href="{{ path('admin_event_new') }}" class=""><i class="fa fa-plus"></i></a>
                             </li>
                             {#<li><a class="close-link"><i class="fa fa-close"></i></a>
                             </li>#}
@@ -63,62 +63,133 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <article class="media event">
-                            <a class="pull-left date">
-                                <p class="month">April</p>
-                                <p class="day">23</p>
-                            </a>
-                            <div class="media-body">
-                                <a class="title" href="#">Item One Title</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </article>
-                        <article class="media event">
-                            <a class="pull-left date">
-                                <p class="month">April</p>
-                                <p class="day">23</p>
-                            </a>
-                            <div class="media-body">
-                                <a class="title" href="#">Item Two Title</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </article>
-                        <article class="media event">
-                            <a class="pull-left date">
-                                <p class="month">April</p>
-                                <p class="day">23</p>
-                            </a>
-                            <div class="media-body">
-                                <a class="title" href="#">Item Two Title</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </article>
-                        <article class="media event">
-                            <a class="pull-left date">
-                                <p class="month">April</p>
-                                <p class="day">23</p>
-                            </a>
-                            <div class="media-body">
-                                <a class="title" href="#">Item Two Title</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </article>
-                        <article class="media event">
-                            <a class="pull-left date">
-                                <p class="month">April</p>
-                                <p class="day">23</p>
-                            </a>
-                            <div class="media-body">
-                                <a class="title" href="#">Item Three Title</a>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            </div>
-                        </article>
+                        {% for event in events %}
+                            <article class="media event">
+                                <a class="pull-left date">
+                                    <p class="month">April</p>
+                                    <p class="day">23</p>
+                                </a>
+                                <div class="media-body">
+                                    <a class="title" href="#">Item One Title</a>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                </div>
+                            </article>
+                        {% endfor %}
+
+                        {% if events|length == 0 %}
+                            <article class="media event">
+                                <div class="media-body">
+                                    <a class="title" href="#"></a>
+                                    <p>{{ 'event.no_event_found'|trans }}</p>
+                                </div>
+                            </article>
+                        {% endif %}
                     </div>
                 </div>
             </div>
         </div>
 
-    {% endblock %}
+        <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-12">
+                <div class="x_panel fixed_height_320">
+                    <div class="x_title">
+                        <h2>Rooms Booking<small>Sessions</small></h2>
+                        <ul class="nav navbar-left panel_toolbox">
+                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                            </li>
+                        </ul>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="x_content">
+                        <h4>Room Type</h4>
+                        <div class="widget_summary">
+                            <div class="w_left w_25">
+                                <span>1.5.2</span>
+                            </div>
+                            <div class="w_center w_55">
+                                <div class="progress">
+                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 66%;">
+                                        <span class="sr-only">60% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="w_right w_20">
+                                <span>123k</span>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+
+                        <div class="widget_summary">
+                            <div class="w_left w_25">
+                                <span>1.5.3</span>
+                            </div>
+                            <div class="w_center w_55">
+                                <div class="progress">
+                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 45%;">
+                                        <span class="sr-only">60% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="w_right w_20">
+                                <span>53k</span>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="widget_summary">
+                            <div class="w_left w_25">
+                                <span>1.5.4</span>
+                            </div>
+                            <div class="w_center w_55">
+                                <div class="progress">
+                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 25%;">
+                                        <span class="sr-only">60% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="w_right w_20">
+                                <span>23k</span>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="widget_summary">
+                            <div class="w_left w_25">
+                                <span>1.5.5</span>
+                            </div>
+                            <div class="w_center w_55">
+                                <div class="progress">
+                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 5%;">
+                                        <span class="sr-only">60% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="w_right w_20">
+                                <span>3k</span>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="widget_summary">
+                            <div class="w_left w_25">
+                                <span>0.1.5.6</span>
+                            </div>
+                            <div class="w_center w_55">
+                                <div class="progress">
+                                    <div class="progress-bar bg-green" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 2%;">
+                                        <span class="sr-only">60% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="w_right w_20">
+                                <span>1k</span>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+             </div>
+        {% endblock %}
 
     {% block sidebar %}
 
