--- a/app/Resources/views/admin/blog/new.html.twig
+++ b/app/Resources/views/admin/blog/new.html.twig
@@ -19,7 +19,7 @@
 
                     {{ form_widget(form.saveAndCreateNew, { label: 'label.save_and_create_new', attr: { class: 'btn btn-primary' } }) }}
 
-                    <a href="{{ path('admin_post_index') }}" class="btn btn-link">
+                    <a href="{{ path('admin_post_new') }}" class="btn btn-link">
                         {{ 'action.back_to_list'|trans }}
                     </a>
                     {{ form_end(form) }}
